src/objects/BMCServiceDesk__CMDB_AttributeDefinition__c.object
<CustomObject>
    <description>This object allows you to store data for all CMDB fields in each CMDB object.</description>
    <fields>
        <fullName>BMCServiceDesk__AttributeID__c</fullName>
        <externalId>true</externalId>
        <label>AttributeID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AttributeName__c</fullName>
        <label>AttributeName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AttributeType__c</fullName>
        <label>AttributeType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REGULAR</fullName>
                    <default>true</default>
                    <label>REGULAR</label>
                </value>
                <value>
                    <fullName>CORE</fullName>
                </value>
                <value>
                    <fullName>INTERNAL_CORE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassID__c</fullName>
        <label>ClassID</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>CMDB_AttributeDefinitions</relationshipLabel>
        <relationshipName>CMDB_AttributeDefinitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassName__c</fullName>
        <formula>BMCServiceDesk__ClassID__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClassName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CustomProperty__c</fullName>
        <label>CustomProperty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DataType__c</fullName>
        <label>DataType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Real</fullName>
                </value>
                <value>
                    <fullName>Character</fullName>
                </value>
                <value>
                    <fullName>Diary</fullName>
                </value>
                <value>
                    <fullName>Selection</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Attachment Field</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Attachment Pool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EntryMode__c</fullName>
        <label>EntryMode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Display Only</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnumType__c</fullName>
        <label>EnumType</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldID__c</fullName>
        <label>FieldID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Hidden__c</fullName>
        <label>Hidden</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>InstanceID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxLength__c</fullName>
        <label>MaxLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Precision__c</fullName>
        <label>Precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PrimaryKey__c</fullName>
        <label>PrimaryKey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Values__c</fullName>
        <label>Values</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>CMDB_AttributeDefinition</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__AttributeID__c</columns>
        <columns>BMCServiceDesk__AttributeName__c</columns>
        <columns>BMCServiceDesk__ClassName__c</columns>
        <columns>BMCServiceDesk__ClassID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMDB_AttributeDefinitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>